--- a/index.html
+++ b/index.html
@@ -109,16 +109,16 @@
                 <div class="d-flex justify-content-center">
                   <a class="btn btn-lg btn-dark d-flex align-items-center" href="about.html">
                     <span>About me </span>
-                    <i class="fa-light fa-arrow-right ms-2 fs-6"></i>
+                    <i class="fa-light fa-arrow-right ms-2 fs-6">dds</i>
                   </a>
 
                   </a>
                 </div>
 
                 <div class="mt-5 ai video-container">
-                  <video class="img-fluid rounded-2 rounded-4" loop autoplay playsinline muted preload="true">
+                  <!-- <video class="img-fluid rounded-2 rounded-4" loop autoplay playsinline muted preload="true">
                     <source src="images/video-ai-2.mp4" type="video/mp4">
-                  </video>
+                  </video> -->
                 </div>
 
               </div>
